fix: User interaction with seats take too long to toggle

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  touch-action: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
